--- a/app.html
+++ b/app.html
@@ -28,72 +28,65 @@
 
   <style>
     :root{
-      --bg:#f6f8fb;
-      --bg2:#eef2ff;
-      --txt:#0b1220;
-      --muted:#5b6474;
+  --bg:#F7F8FC;
+  --bg2:#EEF2FF;
+  --txt:#0B1020;
+  --muted:#5B6474;
 
-      --card:#ffffff;
-      --card2:rgba(255,255,255,.85);
+  --card:#FFFFFF;
+  --card2:rgba(255,255,255,.88);
 
-      --line:rgba(16,24,40,.10);
-      --line2:rgba(16,24,40,.08);
+  --line:rgba(15,23,42,.10);
+  --line2:rgba(15,23,42,.08);
 
-      --accent:#0ea5a4;
-      --accent2:#4f46e5;
+  --accent:#4F46E5;   /* Royal Indigo */
+  --accent2:#06B6D4;  /* Cyan glow */
 
-      --warn:#f59e0b;
-      --bad:#ef4444;
-      --ok:#0ea5a4;
+  --warn:#F59E0B;
+  --bad:#EF4444;
+  --ok:#10B981;
 
-      --shadow:0 12px 30px rgba(16,24,40,.08);
-      --shadow2:0 18px 60px rgba(16,24,40,.10);
-      --ring:rgba(79,70,229,.55);
+  --shadow:0 12px 30px rgba(15,23,42,.08);
+  --shadow2:0 18px 60px rgba(15,23,42,.10);
+  --ring:rgba(79,70,229,.50);
 
-      --inputBg:#fff;
-      --radius:18px;
-      --radius2:16px;
-    }
-
+  --inputBg:#FFFFFF;
+  --radius:18px;
+  --radius2:16px;
+}
     :root[data-theme="day"]{
-      --bg:#f6f8fb;
-      --bg2:#eef2ff;
-      --txt:#0b1220;
-      --muted:#5b6474;
-      --card:#ffffff;
-      --card2:rgba(255,255,255,.85);
-      --line:rgba(16,24,40,.10);
-      --line2:rgba(16,24,40,.08);
-      --inputBg:#fff;
-    }
-
-    /* Soft now visibly different */
-    :root[data-theme="soft"]{
-      --bg:#fffafc;
-      --bg2:#f4f6ff;
-      --txt:#0b1220;
-      --muted:#616a7a;
-      --card:#ffffff;
-      --card2:rgba(255,255,255,.90);
-      --line:rgba(16,24,40,.10);
-      --line2:rgba(16,24,40,.07);
-      --inputBg:#ffffff;
-    }
+  --bg:#F7F8FC;
+  --bg2:#EEF2FF;
+  --txt:#0B1020;
+  --muted:#5B6474;
+  --card:#FFFFFF;
+  --card2:rgba(255,255,255,.88);
+  --line:rgba(15,23,42,.10);
+  --line2:rgba(15,23,42,.08);
+  --inputBg:#FFFFFF;
+}
 
     :root[data-theme="midnight"]{
-      --bg:#0b1220;
-      --bg2:#0f172a;
-      --txt:#eaf0ff;
-      --muted:rgba(226,232,240,.70);
-      --card:#0f172a;
-      --card2:rgba(17,24,39,.84);
-      --line:rgba(255,255,255,.12);
-      --line2:rgba(255,255,255,.10);
-      --inputBg:#0b1220;
-      --shadow:0 14px 40px rgba(0,0,0,.40);
-      --shadow2:0 20px 80px rgba(0,0,0,.50);
-      --ring:rgba(14,165,164,.55);
-    }
+  --bg:#070A12;
+  --bg2:#0B1220;
+  --txt:#EAF0FF;
+  --muted:rgba(226,232,240,.72);
+
+  --card:#0B1326;
+  --card2:rgba(11,19,38,.84);
+
+  --line:rgba(255,255,255,.12);
+  --line2:rgba(255,255,255,.10);
+
+  --inputBg:#0B1220;
+
+  --accent:#6366F1;   /* Indigo stays premium in dark mode */
+  --accent2:#22D3EE;  /* brighter cyan glow */
+
+  --shadow:0 14px 40px rgba(0,0,0,.45);
+  --shadow2:0 20px 80px rgba(0,0,0,.55);
+  --ring:rgba(34,211,238,.40);
+}
 
     :root[data-theme="custom"]{ /* injected by JS */ }
 
@@ -104,9 +97,9 @@
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color:var(--txt);
       background:
-        radial-gradient(900px 420px at 20% 0%, rgba(79,70,229,.10), transparent 60%),
-        radial-gradient(900px 420px at 80% 0%, rgba(14,165,164,.10), transparent 60%),
-        linear-gradient(180deg,var(--bg2),var(--bg));
+  radial-gradient(900px 420px at 20% 0%, rgba(79,70,229,.12), transparent 60%),
+  radial-gradient(900px 420px at 80% 0%, rgba(6,182,212,.10), transparent 60%),
+  linear-gradient(180deg,var(--bg2),var(--bg));
       min-height:100vh;
     }
 
@@ -204,10 +197,10 @@
     .btn:hover{ background:rgba(16,24,40,.03); }
     .btn:active{ transform:translateY(1px); }
     .btn.primary{
-      background:linear-gradient(135deg, var(--accent), rgba(79,70,229,.92));
-      color:#fff;
-      border-color:transparent;
-    }
+  background:linear-gradient(135deg, var(--accent), var(--accent2));
+  color:#fff;
+  border-color:transparent;
+}
     .btn.primary:hover{ filter:brightness(.96); }
     .btn.ghost{ background:transparent; }
     .btn:disabled{ opacity:.55; cursor:not-allowed; transform:none; }
